tests/snapshots/file@base@field@get_on_bool.lox.snap
---
source: tests/common/mod.rs
description: "true.foo; // expect runtime error: Only instances have properties.\n"
input_file: crafting_interpreters_test_files/field/get_on_bool.lox
---
OUT: 

===
ERR: 
  × only instances have properties
   ╭────
 1 │ true.foo; // expect runtime error: Only instances have properties.
   ·      ─┬─
   ·       ╰── here
   ╰────
